--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
                 {tajik: "савор шудан", english: "board"},
                 {tajik: "рафиқ", english: "buddy"},
                 {tajik: "пасту баланд (дар роҳ)", english: "bumpy"},
-                {tajik: "эҳтиёткор", english: "careful"},{tajik: "хрусткунанда", english: "crisp"},
+                {tajik: "эҳтиёткор", english: "careful"},
+                {tajik: "зудшикананда", english: "crisp"},
                 {tajik: "мурда", english: "dead"},
                 {tajik: "хоҳиш", english: "desire"},
                 {tajik: "ноумедӣ", english: "disappointment"},
@@ -324,7 +325,8 @@
                 {tajik: "сайёҳи пиёдагард", english: "backpacker"},
                 {tajik: "манъ кардан", english: "ban"},
                 {tajik: "моли бозоргир", english: "best-selling"},
-                {tajik: "вайрон шудан бо таъсири бактерия", english: "biodegrade"},{tajik: "саратон", english: "cancer"},
+                {tajik: "вайрон шудан бо таъсири бактерия",
+                {tajik: "саратон", english: "cancer"},
                 {tajik: "арзон", english: "cheap"},
                 {tajik: "буғӣ кардан, нафасгир шудан", english: "choke"},
                 {tajik: "боз доштан, ҳаракатро мушкил кардан", english: "clog"},
@@ -344,6 +346,7 @@
                 {tajik: "вайронкунанда, харобкунанда", english: "devastating"},
                 {tajik: "ошкор кардан", english: "discover"},
                 {tajik: "бекор кардан", english: "do away with"}
+                {tajik: "галтондан, свалить", english: "dump"},
             ],
             
             "Unite 4 охир": [
@@ -400,7 +403,6 @@
             ],
             
             "Unite 5 охир": [
-                {tajik: "галтондан, свалить", english: "damp"},
                 {tajik: "канор, край", english: "edge"},
                 {tajik: "император", english: "emperor"},
                 {tajik: "санъати муҳандисӣ", english: "engineering"},
