--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, sans-serif;
             background: linear-gradient(135deg, #1a2980, #26d0ce);
-            color: white;
+            color: blue;
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -232,7 +232,7 @@
             <div id="timer">09:00</div>
             <div id="word-display"></div>
             <div id="input-container">
-                <input type="text" id="answer" placeholder="Навишед ба англисӣ..." autocomplete="off">
+                <input type="text" id="answer" placeholder="Навиcед ба англисӣ..." autocomplete="off">
             </div>
             <div id="progress">Калима: 0/50</div>
             <button id="continue-btn" class="btn">Идома додан</button>
@@ -261,15 +261,6 @@
                 {tajik: "рафиқ", english: "buddy"},
                 {tajik: "пасту баланд (дар роҳ)", english: "bumpy"},
                 {tajik: "эҳтиёткор", english: "careful"},{tajik: "хрусткунанда", english: "crisp"},
-                {tajik: "мурда", english: "dead"},
-                {tajik: "хоҳиш", english: "desire"},
-                {tajik: "ноумедӣ", english: "disappointment"},
-                {tajik: "нафрат, бадбинӣ", english: "dislike"},
-                {tajik: "тормоздиҳӣ, кашолакунии дилгир", english: "drag"},
-                {tajik: "даромадан, ҳамроҳ шудан", english: "drop in"},
-                {tajik: "студияи сабти садо ва видео", english: "recording studio"},
-                {tajik: "хотиррасон кардан", english: "remind"},
-                {tajik: "шӯҳрат, обрӯ", english: "reputation"},
                 {tajik: "чаппагардон кардан", english: "reverse"},
                 {tajik: "вазн, усули мусиқӣ", english: "rhythm"},
                 {tajik: "рост, ҳақонӣ (дар сиёсат)", english: "right-wing"},
